--- a/report/report.tex
+++ b/report/report.tex
@@ -11,7 +11,7 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
-\setlength{\jot}{11pt}
+\setlength{\jot}{12pt}
 
 \usepackage{graphicx}
 \graphicspath{{fig/}}
@@ -203,10 +203,10 @@
             
             As such, it is often favourable to use an \textit{adaptive learning rate}: rather than a fixed constant $\eta$, a new value $\eta_k$ is used at each iteration of the algorithm. Many methods exist for determining such adaptive rates, often based on line search methods - see \cite{line_search} and \cite{adam}.
             
-            In this paper we will use a relatively simple method based on backtracking line search, where the learning rate is steadily grown by some constant factor at each iteration, and then more dramatically decreased when it is too large.
+            In this paper we will use a relatively simple method based on backtracking line search, where the learning rate is steadily grown by some constant factor at each iteration, and then more dramatically decreased when it is too large (see Algorithm \ref{alg:grow_and_slash}).
             
             
-            \begin{algorithm} \label{alg:grow_and_slash}
+            \begin{algorithm}
                 
                 \caption{"Grow and slash" learning rate}
                 
@@ -224,6 +224,8 @@
                     
                 \end{algorithmic}
             
+                \label{alg:grow_and_slash}
+                
             \end{algorithm}
             
             
@@ -818,7 +820,7 @@
     
     
     
-    \subsection{Multiclass Classification}
+    \subsection{Multiclass Classification} \label{sec:multiclass_demo}
         
         In order to demonstrate the behaviour of a multiclass neural network classifier, we first consider a small two-dimensional problem featuring four fully separable classes. The initialisation of a model is much the same as was demonstrated in the previous subsection, although we will add an extra hidden layer:
         
@@ -860,7 +862,7 @@
         \end{figure}
         
         
-        The training dataset is provided as a 3-dimensional array of size 60000x28x28, and therefore a small amount of data preprocessing was required to "unroll" each of the 60000 observations into a one-dimensional vector of length 784. The dataset was then split by assigning each observation at random into one of three groups making up 60\%, 20\% and 20\% of the original dataset: the largest set was used for training, and the other two for hyperparameter tuning via holdout cross-validation and for final performance testing respectively. In each dataset, each input was independently rescaled on a range of 0 to 1 - not \textit{strictly} necessary in the case of this problem, since all values lay somewhere in this range anyway.
+        The training dataset is provided as a 3-dimensional array of size 60000x28x28, and therefore a small amount of data preprocessing was required to "unroll" each of the 60000 observations into a one-dimensional vector of length 784. The dataset was then split by assigning each observation at random into one of three groups making up 60\%, 20\% and 20\% of the original dataset: the largest set was used for training, and the other two for hyperparameter tuning via holdout cross-validation and for final performance testing respectively.
         
         Generally when deciding on a network architecture, it is useful to follow the principle of Occam's razor: in general we ought to choose the simplest model which explains the data sufficiently well. Therefore a relatively small model was defined at first, with a single hidden layer containing a few tens of neurons.
         
@@ -876,7 +878,7 @@
         \end{figure}
         
         
-        We hope that each neuron in our model has "learned to recognise" some pattern in the dataset, and that the weights for that neuron have been adjusted such that the presence of that pattern will trigger a strong response. It therefore is an interesting exercise to visualise the weights of the network and see the patterns that they have learned. It is only really possible for us to interpret with any meaning the weights of the neurons in the first layer, which receive the original images as input, since neurons in subsequent layers are learning "patterns of patterns" as described in Section \ref{sec:forward_prop}. The weights from a selection of neurons in the first layer of the KMNIST-trained model are visualised in Figure \ref{fig:kmnist_neurons}.
+        We hope that each neuron in our model has "learned to recognise" some pattern in the dataset, and that the weights for that neuron have been adjusted such that the presence of that pattern will trigger a strong response. It therefore is an interesting exercise to visualise the weights of the network and see the patterns that they have learned. It is only really possible for us to interpret with any meaning the weights of the neurons in the first layer, which receive the original images as input, since neurons in subsequent layers are learning "patterns of patterns" as described in Section \ref{sec:forward_prop}. The weights from a selection of neurons in the first layer of the KMNIST-trained model are visualised in Figure \ref{fig:kmnist_neurons}: in some cases, hints of patterns resembling brushstrokes in the training images are evident.
         
         
         \begin{figure}[h]
@@ -889,12 +891,20 @@
 
 \section{Areas for Further Work}
 
-    % TODO
+    The theory and methods introduced in this paper are, by modern standards, considered rather limited and simplistic; and therefore they are not often used alone in modern machine learning applications. However, many larger and more powerful models can be constructed using these simpler models as fundamental building blocks.
     
+    The vast majority of modern image classification methods make use of \textit{convolutional neural networks} (CNNs). A "window" of weights is convolved over each training image, and thus only a subsection of the image is used to update the weights at any one time. This preserves much more of the spatial information inherent in the training images (since we avoid the "flattening" process described in Section \ref{sec:multiclass_demo}) and allows for localised patterns to be learned.
+    
+    Another family of models which has gained popularity in recent times is the \textit{recurrent neural network} (RNN), which feeds the output from a layer repeatedly back into the same layer. Such networks have been found to perform extremely well when trained on (potentially limitless) sequential data, such as time series or natural language; and many modern applications of natural language processing and machine translation are underpinned by RNNs \cite{google_nmt}. A detailed overview of RNNs can be found at \cite{kaparthy_rnns}.
+    
+    The code implementation demonstrated in Section \ref{sec:demos} has intentionally been written with an extendable structure: additional layer classes such \texttt{Convolutional} or \texttt{Recurrent} could be built on top of the \texttt{Layer} superclass.
+    
+    Additionally, recent interest in machine learning has rekindled research efforts in the field of numerical optimisation. The method used in this paper, stochastic gradient descent, is one of the oldest and least complex optimisation methods; however, countless variants and improvements exist, as well as many other diverse methods which minimise the objective function by other means. A survey of current techniques can be found in \cite{optimisation} and the majority of these could be added to the implementation from Section \ref{sec:demos} without too much additional work.
     
 
 \bibliography{report}
 \bibliographystyle{abbrv}
+
 
 \end{document}
 	
